@@ -8,11 +8,21 @@
 		
 		<section id="content" class="primary" role="main">
 
-			<header class="page-header">
-				<?php the_archive_title( '<h2 class="archive-title">', '</h2>' ); ?>
-			</header>
+			<?php // Display breadcrumbs or archive title
+			if ( function_exists( 'themezee_breadcrumbs' ) ) :
+
+				themezee_breadcrumbs(); 
+				
+			else : ?>
+			
+				<header class="page-header">
+					<?php the_archive_title( '<h2 class="archive-title">', '</h2>' ); ?>
+				</header>
+			
+			<?php
+			endif;
 		
-			<?php if (have_posts()) : while (have_posts()) : the_post();
+			if (have_posts()) : while (have_posts()) : the_post();
 		
 				get_template_part( 'content' );
 		
