@@ -16,6 +16,8 @@
 	
 		<section id="content" class="primary" role="main">
 		 
+		<?php if ( function_exists( 'themezee_breadcrumbs' ) ) themezee_breadcrumbs(); ?>
+			
 		<?php if (have_posts()) : while (have_posts()) : the_post();
 		
 			get_template_part( 'content' );
