@@ -4,11 +4,21 @@
 		
 		<section id="content" class="primary" role="main">
 		
-			<h2 id="search-title" class="archive-title">
-				<?php printf( esc_html__( 'Search Results for: %s', 'rubine-lite' ), '<span>' . get_search_query() . '</span>' ); ?>
-			</h2>
+			<?php // Display breadcrumbs or archive title
+			if ( function_exists( 'themezee_breadcrumbs' ) ) :
+
+				themezee_breadcrumbs(); 
+				
+			else : ?>
 			
-		<?php if (have_posts()) : while (have_posts()) : the_post();
+				<h2 id="search-title" class="archive-title">
+					<?php printf( esc_html__( 'Search Results for: %s', 'rubine-lite' ), '<span>' . get_search_query() . '</span>' ); ?>
+				</h2>
+			
+			<?php
+			endif;
+			
+			if (have_posts()) : while (have_posts()) : the_post();
 		
 				if ( 'post' == get_post_type() ) :
 		
